Closed Bug 422866 Opened 18 years ago Closed 18 years ago

vfychain -pp command crashes in NSS_shutdown

Categories

(NSS :: Tools, defect, P1)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: nelson, Assigned: nelson)

Details

Attachments

(1 file)

Attached patch patch v1Splinter Review
If you run vfychain with -pp but without -v or -vv, then it crashes during shutdown because of a leaked cert. Patch attached
Attachment #309335 - Flags: review?(alexei.volkov.bugs)
Attachment #309335 - Flags: review?(alexei.volkov.bugs) → review+
cmd/vfychain/vfychain.c; new revision: 1.18; previous revision: 1.17
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Priority: -- → P1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: