Bug 422866: vfychain -pp command crashes in NSS_shutdown, r=alexei